role-cluster/addons/namespaces.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: local-path-storage
- apiVersion: v1
  kind: Namespace
  metadata:
    name: argocd
- apiVersion: v1
  kind: Namespace
  metadata:
    name: monitoring
- apiVersion: v1
  kind: Namespace
  metadata:
    name: logging
- apiVersion: v1
  kind: Namespace
  metadata:
    name: dev
- apiVersion: v1
  kind: Namespace
  metadata:
    name: test
- apiVersion: v1
  kind: Namespace
  metadata:
    name: preprod
- apiVersion: v1
  kind: Namespace
  metadata:
    name: prod
